crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__type_alias__tests__type_alias_with_params.snap
---
source: crates/nash-parse/src/declaration/type_alias.rs
description: type alias Result e a = Result e a
---
Alias(
    None,
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 35,
            },
        },
        value: Alias {
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 12,
                    },
                    end: Position {
                        line: 1,
                        column: 18,
                    },
                },
                value: "Result",
            },
            arguments: [
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 19,
                        },
                        end: Position {
                            line: 1,
                            column: 20,
                        },
                    },
                    value: "e",
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 21,
                        },
                        end: Position {
                            line: 1,
                            column: 22,
                        },
                    },
                    value: "a",
                },
            ],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 25,
                    },
                    end: Position {
                        line: 1,
                        column: 35,
                    },
                },
                value: Type {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 25,
                        },
                        end: Position {
                            line: 1,
                            column: 31,
                        },
                    },
                    name: "Result",
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 32,
                                },
                                end: Position {
                                    line: 1,
                                    column: 33,
                                },
                            },
                            value: Var(
                                "e",
                            ),
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 34,
                                },
                                end: Position {
                                    line: 1,
                                    column: 35,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            },
        },
    },
)
